cmake_minimum_required(VERSION 3.21)
project(rjsj_middle_hw)
add_executable(rjsj_middle_hw ./src/main.cpp ./src/chat_ai.cpp ./src/draw_ai.cpp ./src/math_ai.cpp ./src/parser.cpp)
target_include_directories(rjsj_middle_hw PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/includes)
target_link_directories(rjsj_middle_hw PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_link_libraries(rjsj_middle_hw PUBLIC rjsjai)
target_link_libraries(rjsj_middle_hw PUBLIC ws2_32)