cmake_minimum_required(VERSION 3.21)
project(hw7)
add_executable(hw7 ./src/main.cpp ./src/chat_ai.cpp ./src/draw_ai.cpp ./src/math_ai.cpp ./src/parser.cpp)
target_include_directories(hw7 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/includes)
target_link_directories(hw7 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_link_libraries(hw7 PUBLIC rjsjai)
target_link_libraries(hw7 PUBLIC ws2_32)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)